mobile nav menu checkbox z-index fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ header input[type=checkbox] {
     right: 2.8vw;
     top: 2.7vh;
     justify-content: flex-end;
-    z-index: 9999;
+    z-index: -1;
     opacity: 0;
     height: 2em;
     width: 2em;
@@ -406,6 +406,10 @@ IPAD PRO MEDIA QUERY FORMATTING
     nav div:last-child a:hover {
         color: #05D9E8;
     }
+
+    header input[type=checkbox] {
+        z-index: 9999;
+    }    
 
     /* height-changing inspiration from https://davidwalsh.name/css-slide */
     input[type=checkbox]:checked ~ #menu {
